Added Character and horizontal movement

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@ Temp/UnityTempFile-ee59b3dead3cddd42a06ff85ee858140
 Temp/UnityTempFile-f7156dae16cd50c41ab0fcb86c7b4926
 Temp/UnityTempFile-fdb10d70e9ce046499a9543d6d4e4ac2
 Temp/UnityLockfile
+.vs/dpembert PGFD Assignment 4/v15/Server/sqlite3/storage.ide-wal
+.vs/dpembert PGFD Assignment 4/v15/Server/sqlite3/storage.ide-shm
+.vs/dpembert PGFD Assignment 4/v15/Server/sqlite3/storage.ide
+.vs/dpembert PGFD Assignment 4/v15/Server/sqlite3/db.lock
+.vs/dpembert PGFD Assignment 4/v15/.suo
+.vs/dpembert PGFD Assignment 4/DesignTimeBuild/.dtbcache
