--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ Temp/UnityLockfile
 .vs/dpembert PGFD Assignment 4/v15/Server/sqlite3/db.lock
 .vs/dpembert PGFD Assignment 4/v15/.suo
 .vs/dpembert PGFD Assignment 4/DesignTimeBuild/.dtbcache
+Assets/Scripts/2D-Character-Controller/
